# parking_lot_cleaner

./: .gitignore  package.xml  setup.cfg  setup.py
launch/: launch.py  multi_robot_launch.py
maps/: parking_lot.data  parking_lot.pgm  parking_lot.yaml
models/blue_garbage_bag/: model.config  model.sdf
models/blue_garbage_bag/meshes/: scene.gltf
models/parking_lot/: model.config  model.sdf
models/parking_lot/meshes/: temp_export.dae
params/: bridge.yaml  mapper_params_online_async.yaml  rviz.rviz  rviz.yaml
parking_lot_cleaner/: garbage_deleter.py  garbage_detector.py  garbage_spawner.py  hover_algorithm.py  image_saver.py  initial_pose_publisher.py  job_allocator.py  nav2_goal_sender.py  pose_publisher.py
worlds/: world.sdf
